layout bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,15 @@ body{
     text-align: center;
 }
 
+#img-div{
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 img {
-	display: block;
-	max-width: 100%;
-	height: auto;
+    max-width: 100%;
+    padding: 10px 200px;
+    height: auto;
 }
